about us section image horizontal scroll bug fixed

--- a/src/components/About-us/about-us.styles.scss
+++ b/src/components/About-us/about-us.styles.scss
@@ -57,7 +57,7 @@
 @media(max-width: 425px) {
   .about-us{
     img {
-      width: 100vw !important;
+      width: 95vw !important;
     }
 
     span {
